index.html file updated

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/hi_IN/sdk.js#xfbml=1&version=v11.0" nonce="eQf8dN1A"></script>
 <main class="content">
     <div class="container p-0">
 
@@ -130,6 +132,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="fb-comment-embed" data-href="https://my-richpanel-assignment.herokuapp.com/" data-width="560" data-include-parent="true"></div>
 </main>
 
 <style type="text/css">
