index.html file updated

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/hi_IN/sdk.js#xfbml=1&version=v11.0" nonce="eQf8dN1A"></script>
-<main class="content">
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/hi_IN/sdk.js#xfbml=1&version=v11.0" nonce="eq9QIv8x"></script>
     <div class="container p-0">
 
 		<h1 class="h3 mb-3">Conversation</h1>
@@ -132,7 +131,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="fb-comment-embed" data-href="https://my-richpanel-assignment.herokuapp.com/" data-width="560" data-include-parent="true"></div>
+	<div class="fb-comment-embed" data-href="https://my-richpanel-assignment.herokuapp.com/" data-width="560" data-include-parent="false"></div>
 </main>
 
 <style type="text/css">
