index.html file updated

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 							<div class="flex-grow-1 pl-3">
 								<strong>Hiten Saxena</strong>
 								<div class="text-muted small"><em><b>+91</b>9122908756</em></div>
+								<div class="text-muted small"><a href="mailto:hitensharma@gmail.com">hitensharma@gmail.com</a></div>
 							</div>
 							</div>
 					</div>
