profile pic updated

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 
 							<div class="chat-message-right pb-4">
 								<div>
-									<img src="https://drive.google.com/file/d/1VCjXSf9pIk0M8lOEGBHt0kxWcAS3y3ZK/view?usp=sharing" class="rounded-circle mr-1" alt="Ravi Prakash" width="40" height="40">
+									<img src="https://media-exp1.licdn.com/dms/image/C5603AQFhTdxyg8D5Ig/profile-displayphoto-shrink_400_400/0/1627628051662?e=1634774400&v=beta&t=OC9Bq6YRiMBZIPV5ETl7QtVVA7ogtsxOIoXdIyQO0-Y" class="rounded-circle mr-1" alt="Ravi Prakash" width="40" height="40">
 									<div class="text-muted small text-nowrap mt-2">2:33 am</div>
 								</div>
 								<div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
@@ -93,7 +93,7 @@
 
 							<div class="chat-message-right mb-4">
 								<div>
-									<img src="https://drive.google.com/file/d/1VCjXSf9pIk0M8lOEGBHt0kxWcAS3y3ZK/view?usp=sharing" class="rounded-circle mr-1" alt="Ravi Prakash" width="40" height="40">
+									<img src="https://media-exp1.licdn.com/dms/image/C5603AQFhTdxyg8D5Ig/profile-displayphoto-shrink_400_400/0/1627628051662?e=1634774400&v=beta&t=OC9Bq6YRiMBZIPV5ETl7QtVVA7ogtsxOIoXdIyQO0-Y" class="rounded-circle mr-1" alt="Ravi Prakash" width="40" height="40">
 									<div class="text-muted small text-nowrap mt-2">2:35 am</div>
 								</div>
 								<div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
